Configuration refactoring to reduce dependencies

--- a/DemoWebSite/Web.config
+++ b/DemoWebSite/Web.config
@@ -20,6 +20,7 @@
 
 
 	<xrc>
+		<rootPath virtualPath="~/root" />
 		<sites>
 			<add key="local" uri="http://localhost:8082/DemoWebSite">
 				<parameters>
