--- a/xrc.UnitTest/App.config
+++ b/xrc.UnitTest/App.config
@@ -1,38 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 
-  <configSections>
-    <section name="xrc" type="xrc.Configuration.XrcSection, xrc" />
-  </configSections>
+	<configSections>
+		<section name="xrc" type="xrc.Configuration.XrcSection, xrc" />
+	</configSections>
 
 	<xrc>
-    <sites>
-      <add key="en" uri="http://www.northwind.com">
-        <parameters>
-        </parameters>
-      </add>
-      <add key="it" uri="http://it.northwind.com">
-        <parameters>
-          <add key="culture" value="it" />
-        </parameters>
-      </add>
-      <add key="local" uri="http://localhost:8080" secureUri="https://localhost:8043">
-        <parameters>
-          <add key="debug" value="true" />
-        </parameters>
-      </add>
-    </sites>
-    <parameters>
-      <add key="culture" value="en" />
-      <add key="debug" value="false" />
-    </parameters>
-    <modules>
-      <add name="default" assembly="xrc" />
-      <add name="TestModule" type="xrc.Modules.TestModule, xrc.UnitTest" />
-    </modules>
-    <views>
-      <add name="default" assembly="xrc" />
-    </views>
-  </xrc>
+		<rootPath virtualPath="~/sampleWebSiteStructure" />
+		<sites>
+			<add key="en" uri="http://www.northwind.com">
+				<parameters>
+				</parameters>
+			</add>
+			<add key="it" uri="http://it.northwind.com">
+				<parameters>
+					<add key="culture" value="it" />
+				</parameters>
+			</add>
+			<add key="local" uri="http://localhost:8080" secureUri="https://localhost:8043">
+				<parameters>
+					<add key="debug" value="true" />
+				</parameters>
+			</add>
+		</sites>
+		<parameters>
+			<add key="culture" value="en" />
+			<add key="debug" value="false" />
+		</parameters>
+		<modules>
+			<add name="default" assembly="xrc" />
+			<add name="TestModule" type="xrc.Modules.TestModule, xrc.UnitTest" />
+		</modules>
+		<views>
+			<add name="default" assembly="xrc" />
+		</views>
+	</xrc>
 
 </configuration>
