--- a/xrc/xrc.csproj
+++ b/xrc/xrc.csproj
@@ -56,7 +56,11 @@
     <Compile Include="Components\ComponentDefinitionList.cs" />
     <Compile Include="Configuration\ComponentCollection.cs" />
     <Compile Include="Configuration\ComponentElement.cs" />
-    <Compile Include="Configuration\RootPath.cs" />
+    <Compile Include="Configuration\ISitesConfig.cs" />
+    <Compile Include="Configuration\IViewConfig.cs" />
+    <Compile Include="Configuration\IModuleConfig.cs" />
+    <Compile Include="Configuration\IRootPathConfig.cs" />
+    <Compile Include="Configuration\RootPathElement.cs" />
     <Compile Include="Context\Context.cs" />
     <Compile Include="Context\XrcRequestContext.cs" />
     <Compile Include="Context\IContext.cs" />
@@ -94,15 +98,14 @@
     <Compile Include="Kernel\Kernel.cs" />
     <Compile Include="Kernel\IKernel.cs" />
     <Compile Include="Configuration\XrcSection.cs" />
-    <Compile Include="Configuration\SiteConfiguration.cs" />
-    <Compile Include="Configuration\ISiteConfiguration.cs" />
-    <Compile Include="Configuration\ISiteConfigurationProviderService.cs" />
-    <Compile Include="Configuration\SiteConfigurationProviderService.cs" />
+    <Compile Include="Sites\SiteConfiguration.cs" />
+    <Compile Include="Sites\ISiteConfiguration.cs" />
+    <Compile Include="Sites\ISiteConfigurationProviderService.cs" />
+    <Compile Include="Sites\SiteConfigurationProviderService.cs" />
     <Compile Include="Configuration\SiteParameterCollection.cs" />
     <Compile Include="Configuration\SiteParameterElement.cs" />
     <Compile Include="Configuration\SiteCollection.cs" />
     <Compile Include="Configuration\SiteElement.cs" />
-    <Compile Include="Controller\XrcController.cs" />
     <Compile Include="HttpHandler\XrcHttpHandler.cs" />
     <Compile Include="Views\ViewCatalogService.cs" />
     <Compile Include="Views\SlotRenderer.cs" />
