Added init method to kernel

--- a/DemoWebSite/root/Web.config
+++ b/DemoWebSite/root/Web.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-	<!-- Block direct browsing of the xrc root folder -->
+	<!-- Configuration required to block direct browsing of the xrc root folder.-->
 	<system.web>
 		<httpHandlers>
 			<clear />
