--- a/xrc/xrc.csproj
+++ b/xrc/xrc.csproj
@@ -83,10 +83,16 @@
     <Compile Include="Modules\IModuleFactory.cs" />
     <Compile Include="Kernel\IXrcService.cs" />
     <Compile Include="Kernel\XrcService.cs" />
+    <Compile Include="Pages\Providers\FileSystem\FileSystemPage.cs" />
+    <Compile Include="Pages\Providers\FileSystem\FileSystemPageProviderService.cs" />
+    <Compile Include="Pages\Providers\FileSystem\PageParserResult.cs" />
+    <Compile Include="Pages\Providers\IPageProviderService.cs" />
     <Compile Include="Razor\XrcWebViewPageExtension.cs" />
     <Compile Include="Razor\ModuleInterceptor.cs" />
     <Compile Include="Razor\XrcWebViewPage.cs" />
     <Compile Include="Routing\XrcRoute.cs" />
+    <Compile Include="Sites\SiteConfigurationMismatchException.cs" />
+    <Compile Include="Sites\SiteConfigurationNotFoundException.cs" />
     <Compile Include="Views\IViewCatalogService.cs" />
     <Compile Include="Views\IViewFactory.cs" />
     <Compile Include="Kernel\RenderSlotEvent.cs" />
@@ -119,35 +125,35 @@
     <Compile Include="Script\DynamicExpression\Dynamic.cs" />
     <Compile Include="Script\DynamicExpression\FunctionFactory.cs" />
     <Compile Include="Script\IScriptExpression.cs" />
-    <Compile Include="SiteManager\MashupScriptService.cs" />
-    <Compile Include="SiteManager\IMashupScriptService.cs" />
-    <Compile Include="SiteManager\MashupParameter.cs" />
-    <Compile Include="SiteManager\MashupParameterList.cs" />
-    <Compile Include="SiteManager\XValue.cs" />
-    <Compile Include="SiteManager\XPropertyList.cs" />
-    <Compile Include="SiteManager\RendererDefinitionList.cs" />
-    <Compile Include="SiteManager\MashupActionList.cs" />
-    <Compile Include="SiteManager\MashupFolder.cs" />
-    <Compile Include="SiteManager\MashupParserService.cs" />
-    <Compile Include="SiteManager\MashupLocatorService.cs" />
-    <Compile Include="SiteManager\IMashupLocatorService.cs" />
-    <Compile Include="SiteManager\RendererDefinition.cs" />
+    <Compile Include="Pages\Script\PageScriptService.cs" />
+    <Compile Include="Pages\Script\IPageScriptService.cs" />
+    <Compile Include="Pages\PageParameter.cs" />
+    <Compile Include="Pages\PageParameterList.cs" />
+    <Compile Include="Pages\XValue.cs" />
+    <Compile Include="Pages\XPropertyList.cs" />
+    <Compile Include="Pages\ViewDefinitionList.cs" />
+    <Compile Include="Pages\PageActionList.cs" />
+    <Compile Include="Pages\Providers\FileSystem\XrcFolder.cs" />
+    <Compile Include="Pages\Providers\FileSystem\PageParserService.cs" />
+    <Compile Include="Pages\Providers\FileSystem\PageLocatorService.cs" />
+    <Compile Include="Pages\Providers\FileSystem\IPageLocatorService.cs" />
+    <Compile Include="Pages\ViewDefinition.cs" />
     <Compile Include="Script\ScriptService.cs" />
     <Compile Include="Script\IScriptService.cs" />
     <Compile Include="XElementExtensions.cs" />
-    <Compile Include="SiteManager\XProperty.cs" />
-    <Compile Include="SiteManager\XClass.cs" />
+    <Compile Include="Pages\XProperty.cs" />
+    <Compile Include="Pages\XClass.cs" />
     <Compile Include="Script\ScriptExpression.cs" />
-    <Compile Include="SiteManager\IMashupParserService.cs" />
-    <Compile Include="SiteManager\MashupAction.cs" />
-    <Compile Include="SiteManager\MashupPage.cs" />
+    <Compile Include="Pages\Providers\FileSystem\IPageParserService.cs" />
+    <Compile Include="Pages\PageAction.cs" />
+    <Compile Include="Pages\IPage.cs" />
     <Compile Include="UriExtensions.cs" />
     <Compile Include="Views\NodeJsView.cs" />
     <Compile Include="Views\XHtmlView.cs" />
     <Compile Include="Views\JsonView.cs" />
     <Compile Include="Views\XsltView.cs" />
     <Compile Include="Views\RazorView.cs" />
-    <Compile Include="SiteManager\MashupFile.cs" />
+    <Compile Include="Pages\Providers\FileSystem\XrcFile.cs" />
     <Compile Include="Views\IView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
