--- a/demo/Rio2016/Rio2016/Web.config
+++ b/demo/Rio2016/Rio2016/Web.config
@@ -1,16 +1,17 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
-
 <configuration>
+  <configSections>
+    <section name="xrc" type="xrc.Configuration.XrcSection, xrc" />
+  </configSections>
   <appSettings>
-    <add key="webpages:Version" value="1.0.0.0"/>
-    <add key="ClientValidationEnabled" value="true"/>
-    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="webpages:Version" value="1.0.0.0" />
+    <add key="ClientValidationEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-    
   <system.web>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
@@ -21,11 +22,9 @@
         <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
-
     <authentication mode="Forms">
       <forms loginUrl="~/Account/LogOn" timeout="2880" />
     </authentication>
-
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -33,16 +32,14 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="System.Web.WebPages"/>
+        <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
   </system.web>
-
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
-    <modules runAllManagedModulesForAllRequests="true"/>
+    <validation validateIntegratedModeConfiguration="false" />
+    <modules runAllManagedModulesForAllRequests="true" />
   </system.webServer>
-
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -51,4 +48,30 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <xrc>
+    <rootPath virtualPath="~/xrc" />
+    <sites>
+      <!-- TODO: Customize this settings -->
+      <add key="local" uri="http://localhost:50723/">
+        <parameters>
+          <add key="debug" value="true" />
+        </parameters>
+      </add>
+      <!--<add key="production" uri="http://yoursite.com/">
+				<parameters>
+					<add key="debug" value="false" />
+				</parameters>
+			</add>-->
+    </sites>
+    <parameters>
+      <add key="debug" value="false" />
+    </parameters>
+    <views>
+      <add name="default" assembly="xrc" />
+    </views>
+    <modules>
+      <add name="default" assembly="xrc" />
+      <!--<add name="ExampleModule" type="ExampleNamespace.ExampleModule, ExampleAssembly" />-->
+    </modules>
+  </xrc>
 </configuration>
