Removed IModule interface

--- a/demo/DemoWebSite/Web.config
+++ b/demo/DemoWebSite/Web.config
@@ -46,12 +46,8 @@
 			<add name="default" assembly="xrc" />
 		</views>
 		<modules>
-			<add name="default" assembly="xrc" />
-			<add name="TwitterModule" type="DemoWebSite.TwitterModule, DemoWebSite.Lib" />
-			<add name="GoogleNewsModule" type="DemoWebSite.GoogleNewsModule, DemoWebSite.Lib" />
-			<add name="PlayerModule" type="DemoWebSite.PlayerModule, DemoWebSite.Lib" />
-			<add name="ContactModule" type="DemoWebSite.ContactModule, DemoWebSite.Lib" />
-			<add name="SourceCodeModule" type="DemoWebSite.SourceCodeModule, DemoWebSite.Lib" />
+			<add name="default" assembly="xrc" typePattern=".*Module$" />
+			<add name="demo" assembly="DemoWebSite.Lib" typePattern=".*Module$" />
 		</modules>
 	</xrc>
 
