--- a/test/xrc.UnitTest/App.config
+++ b/test/xrc.UnitTest/App.config
@@ -28,7 +28,7 @@
 			<add key="debug" value="false" />
 		</parameters>
 		<modules>
-			<add name="default" assembly="xrc" />
+			<add name="default" assembly="xrc" typePattern=".*Module$" />
 			<add name="TestModule" type="xrc.Modules.TestModule, xrc.UnitTest" />
 		</modules>
 		<views>
