Nuget package build integrated in build

--- a/demo/DemoWebSite/DemoWebSite.csproj
+++ b/demo/DemoWebSite/DemoWebSite.csproj
@@ -203,11 +203,11 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\xrc.Windsor\xrc.Windsor.csproj">
       <Project>{2496197E-8B17-4AA0-98B2-E57B2C924EDF}</Project>
-      <Name>xrc.Windsor</Name>
+      <Name>xrc.Windsor %28src\xrc.Windsor%29</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\src\xrc\xrc.csproj">
       <Project>{71988DA4-8569-490F-9D08-5B47EF2202F7}</Project>
-      <Name>xrc</Name>
+      <Name>xrc %28src\xrc%29</Name>
     </ProjectReference>
     <ProjectReference Include="..\DemoWebSite.Lib\DemoWebSite.Lib.csproj">
       <Project>{8015F2FD-AC46-47FD-9FD3-8E48A0001433}</Project>
