--- a/test/xrc.UnitTest/xrc.UnitTest.csproj
+++ b/test/xrc.UnitTest/xrc.UnitTest.csproj
@@ -173,7 +173,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\xrc\xrc.csproj">
       <Project>{71988DA4-8569-490F-9D08-5B47EF2202F7}</Project>
-      <Name>xrc</Name>
+      <Name>xrc %28src\xrc%29</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
