reordered some test files

--- a/test/xrc.UnitTest/xrc.UnitTest.csproj
+++ b/test/xrc.UnitTest/xrc.UnitTest.csproj
@@ -71,7 +71,7 @@
     <Compile Include="Mocks\RootPathConfigMock.cs" />
     <Compile Include="Modules\ModuleCatalogService_Test.cs" />
     <Compile Include="Modules\TestModule.cs" />
-    <Compile Include="Pages\FileSystemPageProviderService_Test.cs" />
+    <Compile Include="Pages\Providers\FileSystem\FileSystemPageProviderService_Test.cs" />
     <Compile Include="Views\ViewCatalogService_Test.cs" />
     <Compile Include="Sites\SiteConfigurationProviderService_Test.cs" />
     <Compile Include="Sites\SiteConfiguration_Test.cs" />
@@ -81,30 +81,30 @@
     <Compile Include="Mocks\ModuleCatalogServiceMock.cs" />
     <Compile Include="Mocks\ScriptExpressionMock.cs" />
     <Compile Include="Script\ScriptService_Test.cs" />
-    <Compile Include="Pages\PageLocatorService_Test.cs" />
+    <Compile Include="Pages\Providers\FileSystem\PageLocatorService_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\Xslt\XsltView_Test.cs" />
     <Compile Include="Mocks\ScriptServiceMock.cs" />
-    <Compile Include="Pages\MashupScriptService_Test.cs" />
+    <Compile Include="Pages\Script\PageScriptService_Test.cs" />
     <Compile Include="TestHelper.cs" />
-    <Compile Include="Pages\PageParserService_Test.cs" />
+    <Compile Include="Pages\Providers\FileSystem\PageParserService_Test.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Pages\example6.xrc">
+    <None Include="sampleWebSite2\example6.xrc">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="sampleWebSiteStructure\athletes\xrcFolder.config">
+    <None Include="sampleWebSite1\athletes\xrcFolder.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="Pages\xrcFolder.config">
+    <None Include="sampleWebSite2\xrcFolder.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="Pages\example7.xrc">
+    <None Include="sampleWebSite2\example7.xrc">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="sampleWebSiteStructure\about.xrc">
+    <None Include="sampleWebSite1\about.xrc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <Content Include="Views\Xslt\books.xml">
@@ -127,45 +127,45 @@
     <Content Include="Views\Xslt\transform_withoutdata.xslt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <None Include="sampleWebSiteStructure\athletes\index.xrc">
+    <None Include="sampleWebSite1\athletes\index.xrc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="sampleWebSiteStructure\athletes\{athleteid}\index.xrc">
+    <None Include="sampleWebSite1\athletes\{athleteid}\index.xrc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="sampleWebSiteStructure\index.xrc">
+    <None Include="sampleWebSite1\index.xrc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="sampleWebSiteStructure\teams\index.xrc">
+    <None Include="sampleWebSite1\teams\index.xrc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="sampleWebSiteStructure\teams\{teamid}\index.xrc">
+    <None Include="sampleWebSite1\teams\{teamid}\index.xrc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="sampleWebSiteStructure\teams\{teamid}\matches.xrc">
+    <None Include="sampleWebSite1\teams\{teamid}\matches.xrc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="sampleWebSiteStructure\teams\{teamid}\{playerid}\index.xrc">
+    <None Include="sampleWebSite1\teams\{teamid}\{playerid}\index.xrc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="sampleWebSiteStructure\teams\{teamid}\{playerid}\stats.xrc">
+    <None Include="sampleWebSite1\teams\{teamid}\{playerid}\stats.xrc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="App.config" />
-    <None Include="Pages\example5.xrc">
+    <None Include="sampleWebSite2\example5.xrc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </None>
-    <None Include="Pages\example4.xrc">
+    <None Include="sampleWebSite2\example4.xrc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="Pages\example3.xrc">
+    <None Include="sampleWebSite2\example3.xrc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="Pages\example2.xrc">
+    <None Include="sampleWebSite2\example2.xrc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="Pages\example1.xrc">
+    <None Include="sampleWebSite2\example1.xrc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
