--- a/src/xrc/xrc.csproj
+++ b/src/xrc/xrc.csproj
@@ -86,6 +86,8 @@
     <Compile Include="Modules\IModuleFactory.cs" />
     <Compile Include="Kernel\IXrcService.cs" />
     <Compile Include="Kernel\XrcService.cs" />
+    <Compile Include="Pages\Providers\FileSystem\XrcFile.cs" />
+    <Compile Include="Pages\Providers\FileSystem\XrcFileSystemHelper.cs" />
     <Compile Include="Pages\Providers\FileSystem\FileSystemPage.cs" />
     <Compile Include="Pages\Providers\FileSystem\FileSystemPageProviderService.cs" />
     <Compile Include="Pages\Providers\FileSystem\PageParserResult.cs" />
@@ -154,7 +156,7 @@
     <Compile Include="Views\JsonView.cs" />
     <Compile Include="Views\XsltView.cs" />
     <Compile Include="Views\RazorView.cs" />
-    <Compile Include="Pages\Providers\FileSystem\XrcFile.cs" />
+    <Compile Include="Pages\Providers\FileSystem\XrcFileResource.cs" />
     <Compile Include="Views\IView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
